adaptive second modal screen for landscape orientation - save modal__close layout on small screens - fix

--- a/src/main/app/view/components/Modal/index.pcss
+++ b/src/main/app/view/components/Modal/index.pcss
@@ -117,6 +117,10 @@
   .modal__footer {
     padding: 12px 0;
   }
+
+  .date-time-picker__aspect-ratio {
+    margin: 2px 0;
+  }
 }
 
 /* 1st screen */
